--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,9 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Go template
-# Compiled Object files, Static and Dynamic libs (Shared Objects)
-*.o
-*.a
-*.so
+/.idea
+/vendor
+/build
 
-# Folders
-_obj
-_test
-
-# Architecture specific extensions/prefixes
-*.[568vq]
-[568vq].out
-
-*.cgo1.go
-*.cgo2.c
-_cgo_defun.c
-_cgo_gotypes.go
-_cgo_export.*
-
-_testmain.go
-
-*.exe
-*.test
-*.prof
-
-glide.lock
-vendor/
+.DS_Store
+/twitterbeat
+/twitterbeat.test
+/twitterbeat.yml
+*.pyc
