--- a/glide.yaml
+++ b/glide.yaml
@@ -7,3 +7,5 @@ import:
   - libbeat/cfgfile
   - libbeat/common
   - libbeat/logp
+- package: https://github.com/ChimeraCoder/anaconda
+- package: https://github.com/dustin/gojson
