--- a/etc/beat.yml
+++ b/etc/beat.yml
@@ -5,3 +5,15 @@
 twitterbeat:
   # Defines how often an event is sent to the output
   period: 1s
+  
+  twitter:
+    # Defines the catched usernames (screennames)
+    names: ${SCREEN_NAMES:["@buehler_c", "@smartive_ch", "@elastic", "@iamdevloper"]}
+   
+    # Defines the api and consumer key from twitter api
+    consumer_key: ${CONSUMER_KEY}
+    consumer_secret: ${CONSUMER_SECRET}
+    access_key: ${ACCESS_KEY}
+    access_secret: ${ACCESS_SECRET}
+
+
