--- a/etc/twitterbeat.yml
+++ b/etc/twitterbeat.yml
@@ -4,7 +4,7 @@
 
 twitterbeat:
   # Defines how often an event is sent to the output
-  period: 1s
+  period: ${PERIOD:60s}
   
   twitter:
     # Defines the catched usernames (screennames)
@@ -33,7 +33,7 @@ output:
     # Scheme and port can be left out and will be set to the default (http and 9200)
     # In case you specify and additional path, the scheme is required: http://localhost:9200/path
     # IPv6 addresses should always be defined as: https://[2001:db8::1]:9200
-    hosts: ["localhost:9200"]
+    hosts: ${ES_HOSTS:["localhost:9200"]}
 
     # Optional protocol and basic auth credentials.
     #protocol: "https"
@@ -200,12 +200,12 @@ shipper:
   # The name of the shipper that publishes the network data. It can be used to group
   # all the transactions sent by a single shipper in the web interface.
   # If this options is not defined, the hostname is used.
-  #name:
+  name: ${BEAT_NAME}
 
   # The tags of the shipper are included in their own field with each
   # transaction published. Tags make it easy to group servers by different
   # logical properties.
-  #tags: ["service-X", "web-tier"]
+  tags: ${BEAT_TAGS}
 
   # Uncomment the following if you want to ignore transactions created
   # by the server on which the shipper is installed. This option is useful
@@ -269,6 +269,6 @@ logging:
 
   # Sets log level. The default log level is error.
   # Available log levels are: critical, error, warning, info, debug
-  #level: error
+  #level: ${LOG_LEVEL:error}
 
 
